Fix non-full page rendering on mobile device screen size

--- a/web/src/app/pages/single.component.scss
+++ b/web/src/app/pages/single.component.scss
@@ -1,3 +1,8 @@
+:host {
+  display: block;
+  width: 100vw;
+}
+
 app-post-title {
   margin-top: 8rem;
 }
